@@ -24,3 +24,12 @@ Files modified: framework.c, global.h, algorithm.c, algorithm.h
 
 	-Added Comments to global.h file (no code added)
 
+2/23/2019 - Regi
+	- Implemented function to change the seed of rand(), so that our results aren't skewed towards a single data set
+	- changed minimum payload size to 0, since there are packets that just transfer the header with no payload.
+		- minimum packet struct size is now 192 and max is 9192
+	- initilized expected[], line 92 in framework.c, since variables that are not initialized may store garbage value
+	- set expected[], line 96 in framework.c, to the order of the first packet it recieved 
+	- moved original algorithm.c (singe wire algorithm) to newly created algorithm folder
+	- detached threads, so that resources are released when thread terminates since we're not waiting for them to join back to main()
+	
